--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -26,6 +26,9 @@ ru:
       room: Комната
       reservation: Бронь
       user: Пользователь
+      client: Клиент
+      contact_information: Контактная информация
+      phone: Телефон
     attributes:
       room_category:
         name: Название
@@ -37,6 +40,14 @@ ru:
         departure: Дата выезда
       user:
         password: Пароль
+      client:
+        last_name: Фамилия
+        first_name: Имя
+        middle_name: Отчество
+      phone:
+        number: Номер телефона
+      email:
+        address: E-mail
   activemodel:
 #    models:
 #      rooms_form: Форма
